--- a/index.html
+++ b/index.html
@@ -29,16 +29,36 @@
         </div>
     </nav>
 
-   <div class="container">
-       <div class="row">
-           <div class="col-2">
-               About Me
+    <div class="container">
+        <div class="row">
+            <div class="col-2">
+                About Me
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2">
+                <img src="./assets/placeholder-image.png">
+            </div>
+            <div class="col-5">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-7">
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia.
+            </div>
+        </div>
 
-           </div>
-       </div>
+    </div>
 
-    
-   </div>
+
+
 
 
 
