--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 </head>
 
-<body>
+<body style="background-color: gray;">
+
+    <style>
+    </style>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Graham Elphick</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -29,20 +33,28 @@
         </div>
     </nav>
 
+    <br>
+    <br>
+
     <div class="container">
-        <div class="row" style="background-color: lightblue;">
-            <div class="col-7">
+        <div class="row">
+            <div class="col-7" style="background-color: white;">
                 <div class="container">
                     <div class="row">
-                        <div class="col-2">
+                        <div class="col-3">
                             About Me
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-2">
+                        <div class="col-12">
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
                             <img src="./assets/placeholder-image.png">
                         </div>
-                        <div class="col-5">
+                        <div class="col-8">
                             <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                             laboris
@@ -58,7 +70,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-7">
+                        <div class="col-12">
                             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium,
                             totam
