layout for portfolio.html and contact.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
-<body style="background-color: gray;">
+<body>
 
     <style>
     </style>
@@ -38,11 +39,11 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-7" style="background-color: white;">
+            <div class="col-8" style="background-color: white;">
                 <div class="container">
                     <div class="row">
                         <div class="col-3">
-                            About Me
+                            <h1>About Me</h1>
                         </div>
                     </div>
                     <div class="row">
