--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 
 
 
@@ -12,11 +14,73 @@
 
 <body>
 
-    <h1>
-        I'm a portfolio
-    </h1>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Graham Elphick</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
 
+    <div class="container">
+        <div class="row">
+            <div class="col-8" style="background-color: white;">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-3">
+                            <h1>Portfolio</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="https://via.placeholder.com/350">
+                        </div>
+                        <div class="col-6">
+                            <img src="https://via.placeholder.com/350">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="https://via.placeholder.com/350">
+                        </div>
+                        <div class="col-6">
+                            <img src="https://via.placeholder.com/350">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="https://via.placeholder.com/350">
+                        </div>
+                        <div class="col-6">
+                            <img src="https://via.placeholder.com/350">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+                        
 
 
 </body>
