--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+
 
 
 
@@ -39,7 +41,7 @@
             <div class="col-8" style="background-color: white;">
                 <div class="container">
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-4">
                             <h1>Contact</h1>
                         </div>
                     </div>
