--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Graham Elphick</a>
+        <a class="navbar-brand brandText" href="index.html">Graham Elphick</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,10 +38,10 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-8" style="background-color: white;">
+            <div class="col-12-fluid col-md-9" style="background-color: white;">
                 <div class="container">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-12 col-md-4">
                             <h1>About Me</h1>
                         </div>
                     </div>
@@ -51,10 +51,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-4">
-                            <img src="./assets/placeholder-image.png">
+                        <div class="col-12 col-md-4">
+                            <img src="./assets/placeholder-image-200.png">
                         </div>
-                        <div class="col-8">
+                        <div class="col-12 col-md-8">
                             <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                             laboris
