--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-8" style="background-color: white;">
+            <div class="col-9" style="background-color: white;">
                 <div class="container">
                     <div class="row">
                         <div class="col-4">
@@ -54,27 +54,27 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6">
-                            <img src="https://via.placeholder.com/350">
+                        <div class="col-lg-6 imageSize">
+                            <img src="./assets/placeholder-image-350.png">
                         </div>
-                        <div class="col-6">
-                            <img src="https://via.placeholder.com/350">
+                        <div class="col-lg-6 imageSize">
+                            <img src="./assets/placeholder-image-350.png">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 imageSize">
+                            <img src="./assets/placeholder-image-350.png">
+                        </div>
+                        <div class="col-6 imageSize">
+                            <img src="./assets/placeholder-image-350.png">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6">
-                            <img src="https://via.placeholder.com/350">
+                            <img src="./assets/placeholder-image-350.png">
                         </div>
                         <div class="col-6">
-                            <img src="https://via.placeholder.com/350">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <img src="https://via.placeholder.com/350">
-                        </div>
-                        <div class="col-6">
-                            <img src="https://via.placeholder.com/350">
+                            <img src="./assets/placeholder-image-350.png">
                         </div>
                     </div>
                 </div>
