added personal info and images

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Graham Elphick</a>
+        <a class="navbar-brand" id="bioName" href="#">Graham Elphick</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-9" style="background-color: white;">
+            <div class="col-12 col-xl-9" style="background-color: white;">
                 <div class="container">
                     <div class="row">
                         <div class="col-4">
@@ -54,27 +54,27 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 imageSize">
-                            <img src="./assets/placeholder-image-350.png">
+                        <div class="col-12 col-xl-6 imageSize">
+                            <img class="img-responsive portfolio-image" src="./assets/portfolio-resized-photos/port-img-1.png" alt="Open laptop running code editor">
                         </div>
-                        <div class="col-lg-6 imageSize">
-                            <img src="./assets/placeholder-image-350.png">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 imageSize">
-                            <img src="./assets/placeholder-image-350.png">
-                        </div>
-                        <div class="col-6 imageSize">
-                            <img src="./assets/placeholder-image-350.png">
+                        <div class="col-12 col-xl-6 imageSize">
+                            <img class="img-responsive" src="./assets/portfolio-resized-photos/port-img-2.png" alt="Sketches of a website design">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6">
-                            <img src="./assets/placeholder-image-350.png">
+                        <div class="col-12 col-xl-6 imageSize">
+                            <img class="img-responsive" src="./assets/portfolio-resized-photos/port-img-3.png" alt="Dual monitor setup">
                         </div>
-                        <div class="col-6">
-                            <img src="./assets/placeholder-image-350.png">
+                        <div class="col-12 col-xl-6 imageSize">
+                            <img class="img-responsive" src="./assets/portfolio-resized-photos/port-img-4.png" alt="Close-up on slightly opened laptop">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-xl-6 imageSize">
+                            <img class="img-responsive" src="./assets/portfolio-resized-photos/port-img-5.png" alt="Many lines of code">
+                        </div>
+                        <div class="col-12 col-xl-6">
+                            <img class="img-responsive" src="./assets/portfolio-resized-photos/port-img-6.png" alt="Nice desk space with laptop and monitor">
                         </div>
                     </div>
                 </div>
