--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Graham Elphick</a>
+        <a class="navbar-brand" id="bioName" href="#">Graham Elphick</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-9" style="background-color: white;">
+            <div class="col-12 col-md-9" style="background-color: white;">
                 <div class="container">
                     <div class="row">
                         <div class="col-4">
