--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand brandText" href="index.html">Graham Elphick</a>
+        <a class="navbar-brand" id="bioName" href="index.html">Graham Elphick</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,14 +34,15 @@
                 </li>
             </ul>
         </div>
+        </div>
     </nav>
 
     <div class="container">
         <div class="row">
-            <div class="col-12-fluid col-md-9" style="background-color: white;">
+            <div class="col-12 col-md-9" style="background-color: white;">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 col-md-4">
+                        <div class="col-12">
                             <h1>About Me</h1>
                         </div>
                     </div>
@@ -51,34 +52,25 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-md-4">
-                            <img src="./assets/placeholder-image-200.png">
-                        </div>
-                        <div class="col-12 col-md-8">
-                            <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris
-                            nisi
-                            ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                            velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                            in
-                            culpa
-                            qui officia deserunt mollit anim id est laborum.
+                        <div class="col-12">
+                            <img class="img-responsive" id="bioImage" src="./assets/bio-image-2.png" alt="Photo of Graham Elphick">
+                            <p> I like to create. I like to write, film, record. My newest form of creation- coding!
+                                Adding this newest skill to my arsenal will make me a powerful content creator. Not only
+                                can I improve a business' online presence, I can now build it from scratch. My goal is
+                                to be a client's one-stop-shop for all their marketing needs and to be able to provide
+                                an unparalleled service.
                             </p>
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-12">
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium,
-                            totam
-                            rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                            dicta
-                            sunt
-                            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
-                            quia.
+                            <p>
+                                <strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/graham-elphick-22a352149/" target="_blank">https://www.linkedin.com/in/graham-elphick-22a352149/</a>
+                                <br>
+                                <strong>GitHub: </strong><a href="https://github.com/grahamelphick" target="_blank">https://github.com/grahamelphick</a>
+                                <br>
+                                <strong>Facebook: </strong><a href= "https://www.facebook.com/graham.elphick" target="_blank">https://www.facebook.com/graham.elphick</a>
                             </p>
                         </div>
                     </div>
