--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <title>About Me Page</title>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="./css/style.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-
-    <style>
-    </style>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" id="bioName" href="index.html">Graham Elphick</a>
@@ -34,7 +34,6 @@
                 </li>
             </ul>
         </div>
-        </div>
     </nav>
 
     <div class="container">
@@ -53,7 +52,8 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <img class="img-responsive" id="bioImage" src="./assets/bio-image-2.png" alt="Photo of Graham Elphick">
+                            <img class="img-responsive" id="bioImage" src="./assets/bio-image-2.png"
+                                alt="Photo of Graham Elphick">
                             <p> I like to create. I like to write, film, record. My newest form of creation- coding!
                                 Adding this newest skill to my arsenal will make me a powerful content creator. Not only
                                 can I improve a business' online presence, I can now build it from scratch. My goal is
@@ -66,11 +66,15 @@
                     <div class="row">
                         <div class="col-12">
                             <p>
-                                <strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/graham-elphick-22a352149/" target="_blank">https://www.linkedin.com/in/graham-elphick-22a352149/</a>
+                                <strong>LinkedIn: </strong><a
+                                    href="https://www.linkedin.com/in/graham-elphick-22a352149/"
+                                    target="_blank">https://www.linkedin.com/in/graham-elphick-22a352149/</a>
                                 <br>
-                                <strong>GitHub: </strong><a href="https://github.com/grahamelphick" target="_blank">https://github.com/grahamelphick</a>
+                                <strong>GitHub: </strong><a href="https://github.com/grahamelphick"
+                                    target="_blank">https://github.com/grahamelphick</a>
                                 <br>
-                                <strong>Facebook: </strong><a href= "https://www.facebook.com/graham.elphick" target="_blank">https://www.facebook.com/graham.elphick</a>
+                                <strong>Facebook: </strong><a href="https://www.facebook.com/graham.elphick"
+                                    target="_blank">https://www.facebook.com/graham.elphick</a>
                             </p>
                         </div>
                     </div>
